angular material added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<div>Hi there this is angular project</div>
-
+<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
 <router-outlet></router-outlet>
