--- a/src/app/financial-cloud/financial-cloud.component.html
+++ b/src/app/financial-cloud/financial-cloud.component.html
@@ -21,6 +21,13 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+  <mat-paginator
+    #paginator
+    [length]="totalSize"
+    [pageIndex]="currentPage"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    (page)="handlePage($event)"
+  >
   </mat-paginator>
 </div>
