--- a/src/app/financial-cloud/financial-cloud.component.html
+++ b/src/app/financial-cloud/financial-cloud.component.html
@@ -26,7 +26,7 @@
     [length]="totalSize"
     [pageIndex]="currentPage"
     [pageSize]="pageSize"
-    [pageSizeOptions]="[5, 10, 25, 100]"
+    [pageSizeOptions]="[5, 10, 20]"
     (page)="handlePage($event)"
   >
   </mat-paginator>
