--- a/src/app/financial-cloud/financial-cloud.component.html
+++ b/src/app/financial-cloud/financial-cloud.component.html
@@ -1,3 +1,7 @@
+<mat-form-field appearance="standard">
+  <mat-label>Search Pokemon</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Pokemon" #input />
+</mat-form-field>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="data" class="mat-elevation-z8">
     <ng-container matColumnDef="#">
@@ -19,6 +23,12 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">
+        No data matching the filter "{{ input.value }}"
+      </td>
+    </tr>
   </table>
 
   <mat-paginator
@@ -26,8 +36,9 @@
     [length]="totalSize"
     [pageIndex]="currentPage"
     [pageSize]="pageSize"
-    [pageSizeOptions]="[5, 10, 20]"
+    [pageSizeOptions]="[5, 10, 20, 50, 151]"
     (page)="handlePage($event)"
+    aria-label="Select page of Pokemon"
   >
   </mat-paginator>
 </div>
